<resources>
    <string name="app_name">PinVault</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_about">About</string>


    <!-- drawer titles -->
    <string name="new_pin">New Pin</string>
    <string name="load_pins">Load Pins</string>
    <string name="reset_master_password">Reset Master Password</string>
    <string name="share_pins">Share Pins</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- New pin compnents -->
    <string name="name_label">Name:</string>
    <string name="password_label">Password:</string>
    <string name="notes_label">Notes:</string>

    <string name="save_pin">Save</string>
    <string name="discard_pin">Discard</string>

    <string name="master_pib">Create Master Pin:</string>
    <string name="title_activity_edit_master_pin">EditMasterPin</string>


</resources>
