<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="co.khanal.pinvault.MainActivity">

    <Space
        android:id="@+id/header_space"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_vertical_margin" />

    <!-- TODO: Update blank fragment layout -->
    <TextView
        style="@style/labels"
        android:layout_below="@+id/header_space"
        android:text="@string/name_label"
        android:id="@+id/name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <EditText
        style="@style/values"
        android:id="@+id/name_value"
        android:layout_below="@id/name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        style="@style/labels"
        android:text="@string/password_label"
        android:id="@+id/password_label"
        android:layout_below="@id/name_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        style="@style/values"
        android:id="@+id/password_value"
        android:layout_below="@id/password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/labels"
        android:text="@string/notes_label"
        android:id="@+id/notes_label"
        android:layout_below="@id/password_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        style="@style/values"
        android:id="@+id/notes_value"
        android:layout_below="@id/notes_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.FloatingActionButton
        android:layout_alignParentRight="true"
        android:layout_below="@id/notes_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="bottom|right"
        android:background="@drawable/ic_new_pin"/>



</RelativeLayout>

